static/styles/style.css
:root {
  animation-name: pantoneColors;
  animation-duration: 766s;
  animation-iteration-count: infinite;
  animation-direction: alternate;

  --active: #903;
  --background: #fff;
  --code: #abb2bf;
  --font-color: #000;
  --font-size: 1.3rem;
  --hover: #9cf3;
  --light: #069;
  --round: 5px;
}

a {
  color: var(--light);
  text-decoration-line: none;
}

abbr {
  color: var(--light);
}

blockquote {
  border-left: 3px solid var(--light);
  color: #808080;
  padding-left: 1em;
}

blockquote:hover {
  border-left: 3px solid var(--hover);
  filter: invert();
}

body {
  margin: 0.5em;
}

code {
  background: #282c34;
  color: var(--code);
  display: inline-block;
}

button,
code,
h1,
h2,
header,
iframe,
img,
summary,
table,
#search {
  border-radius: var(--round);
}

div.template > img:hover {
  box-shadow: 0px 2px 7px 0px black;
}

/* space elements */
button,
h1,
h2,
pre > code,
summary,
#search {
  padding: 1%;
}

details > *,
summary {
  margin: 1%;
}

button.link,
h2.template {
  cursor: pointer;
  font-size: var(--font-size);
}

::selection,
button.link:hover,
h2.template:hover,
header button.link.active {
  background: var(--light);
  filter: invert();
}

header {
  align-items: center;
  background: var(--light);
  box-shadow: 0px 2px 7px 0px black;
  color: #fff;
  display: flex;
  justify-content: space-between;
  margin: auto;
  max-width: 100ch;
  position: sticky;
  top: 0;
  z-index: 2;
}

header button {
  background: transparent;
  border: none;
  color: inherit;
  font-family: inherit;
  font-weight: normal;
  margin: 0 0.5% 0 0.5%;
  text-align: center;
  /* 5 items in header separated by 2% */
  width: calc(100% / 5 - 1%);
}

/* no select elements */
header,
summary,
#background,
#search {
  user-select: none;
}

html {
  background: var(--background);
  font-family: Verdana, Arial, sans-serif;
}

i {
  color: #666666;
  font-size: calc(var(--font-size) * 0.9);
}

iframe {
  border-width: 0;
}

p > code {
  font-size: calc(var(--font-size) * 0.85);
  margin: 0;
  padding: 0.2em 0.4em;
}

p > img {
  max-height: 60vh;
  max-width: 100%;
}

noscript,
ol,
p,
summary,
table,
ul {
  font-size: var(--font-size);
}

pre > code {
  border-left: 0.5em solid var(--light);
  font-family: "Courier New", monospace !important;
  font-size: calc(var(--font-size) * 0.9);
  max-height: 46vh;
  overflow: auto;
  tab-size: 4;
  width: calc(96% - 0.5em); /* 100% with border */
}

pre > code:focus,
pre > code:hover {
  border-left: 0.5em solid var(--light);
  filter: invert();
  outline: none;
}

summary {
  background: var(--light);
  color: #fff;
  cursor: pointer;
  outline: none;
}

summary:hover {
  background: var(--light);
  filter: invert();
}

table {
  border: solid 1px #3366997f;
}

table thead {
  background: var(--light);
  color: #fff;
}

tbody tr:hover {
  background: var(--light);
  color: #fff;
  filter: invert();
}

tr:nth-child(even) {
  background: var(--hover);
}

#cover {
  height: 30vh;
  margin: 1em 0 1em 0;
  object-fit: contain;
  width: 100%;
}

#logo {
  cursor: pointer;
  margin-top: 5%;
  width: 50%;
}

#page {
  color: var(--font-color);
  margin: auto;
  max-width: 80ch;
  width: 80%;
}

#search {
  font-family: Verdana, Arial, sans-serif;
  width: 25%;
}

#search:focus {
  outline: none;
}

#title {
  font-size: calc(var(--font-size) * 1.5);
  text-align: center;
}

#topleft {
  text-align: center;
  width: 18%;
}

#topleft p {
  font-size: calc(var(--font-size) * 0.8);
  margin: 0;
}

.badge {
  align-content: space-evenly;
  align-items: center;
  display: grid;
  height: 17vh;
  justify-content: center;
  justify-items: center;
  margin: 0.5vh;
}

.CodeMirror {
  height: 100% !important;
}

.EasyMDEContainer {
  aspect-ratio: 3 / 2;
  width: 100%;
}

.gameboy {
  aspect-ratio: 160 / 144;
  width: 100%;
}

.pdf {
  aspect-ratio: 8.5 / 11;
  width: 65%;
}

.video {
  aspect-ratio: 16 / 9;
  width: 100%;
}

.web {
  aspect-ratio: 1 / 1;
  width: 100%;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #000;
    --font-color: #fff;
    --hover: var(--active);
  }
}

@media print {
  :root {
    --background: #fff;
    --font-color: #000;
    --font-size: 12pt;
    --hover: #9cf3;
    --light: #069 !important;
  }

  footer,
  header {
    display: none;
  }

  p > img {
    max-width: 50%;
  }

  pre > code {
    max-height: max-content;
    white-space: break-spaces;
  }
}

@keyframes pantoneColors {
  /* 2000 */
  0% {
    --light: #9bb7d4;
  }
  /* 2001 */
  4.17% {
    --light: #c74375;
  }
  /* 2002 */
  8.33% {
    --light: #bf1932;
  }
  /* 2003 */
  12.5% {
    --light: #7bc4c4;
  }
  /* 2004 */
  16.67% {
    --light: #e2583e;
  }
  /* 2005 */
  20.83% {
    --light: #53b0ae;
  }
  /* 2006 */
  25% {
    --light: #decdbe;
  }
  /* 2007 */
  29.17% {
    --light: #9b1b30;
  }
  /* 2008 */
  33.33% {
    --light: #5a5b9f;
  }
  /* 2009 */
  37.5% {
    --light: #f0c05a;
  }
  /* 2010 */
  41.67% {
    --light: #45b5aa;
  }
  /* 2011 */
  45.83% {
    --light: #d94f70;
  }
  /* 2012 */
  50% {
    --light: #dd4124;
  }
  /* 2013 */
  54.17% {
    --light: #009473;
  }
  /* 2014 */
  58.33% {
    --light: #b163a3;
  }
  /* 2015 */
  62.5% {
    --light: #955251;
  }
  /* 2016 */
  66.67% {
    --light: linear-gradient(to right, #f7cac9, #92a8d1);
  }
  /* 2017 */
  75% {
    --light: #88b04b;
  }
  /* 2018 */
  79.17% {
    --light: #5f4b8b;
  }
  /* 2019 */
  83.33% {
    --light: #ff6f61;
  }
  /* 2020 */
  87.5% {
    --light: #0f4c81;
  }
  /* 2021 */
  91.67% {
    --light: linear-gradient(to right, #939597, #f5df4d);
  }
  /* 2022 */
  100% {
    --light: #6667ab;
  }
}

